--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,10 +4,10 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.0 <4.0.0"
 
 dependencies:
-  app_tracking_transparency: ^2.0.4
+  app_tracking_transparency: ^2.0.6+1
   flutter:
     sdk: flutter
 
@@ -17,7 +17,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  innim_lint: ^0.4.0
+  innim_lint: ^0.5.0+1
 
 flutter:
   uses-material-design: true
