--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,17 @@ issue_tracker: https://github.com/Innim/flutter_login_facebook/issues
 
 environment:
   sdk: ">=2.15.0 <4.0.0"
-  flutter: ">=2.8.0"
+  flutter: ">=3.29.2"
 
 dependencies:
   flutter:
     sdk: flutter
-  list_ext: ^1.0.0
+  list_ext: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  innim_lint: ^0.4.0
+  innim_lint: ^0.5.0+1
 
 flutter:
   plugin:
